@@ -39,6 +39,11 @@ remove = Text::ParseWords
 ; comes with THIS distro
 remove = FFI::Platypus::ConfigData
 
+; comes with Strawberry (only place we use it)
+remove = Win32
+remove = Win32::Process
+remove = Win32API::File
+
 [Prereqs / ConfigurePrereqs]
 -phase = configure
 Alien::FFI = 0.06
