@@ -6,7 +6,7 @@
 
     include/ppport.h -- Perl/Pollution/Portability Version 3.28
 
-    Automatically created by Devel::PPPort running under perl 5.020001.
+    Automatically created by Devel::PPPort running under perl 5.014004.
 
     Do NOT edit this file directly! -- Edit PPPort_pm.PL and the
     includes in parts/inc/ instead.
